(clawpack/swirl (cons)) Update example to include full testing for conservation fix

--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -33,22 +33,22 @@
      # --------------
      tfinal = 0.3         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 1e-2   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 1.25e-3   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3
+     outstyle = 3         # OutputStyle = 1,2,3
 
-     nout  = 15           # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
-     nstep = 1            # Only used if outstyle is 3
+     nout  = 240           # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
+     nstep = 16            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = essential   
+     verbosity = production   
      output = T
 
      # -----------
@@ -64,7 +64,7 @@
      # -------------------------
      trapfpe = T                 # Trap floating point errors.
      mpi_debug = F               # Attach mpi processes in gdb
-     conservation-check = F
+     conservation-check = T
      run-user-diagnostics = F
      compute-error = F
      report-timing = F
