--- a/applications/clawpack/advection/2d/swirl_cons/example0.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example0.ini
@@ -1,6 +1,8 @@
 [user]
-     example = 0 
-     rp-solver = 1    # 1-QS; 2-WD; 3=EC; 4=FW
+     example = 0      # u(x,y) > 0
+     mapping = 0      # Cartesian grid
+
+     rp-solver = 1    # 1-QS; 2-WD; 3=EC; 4=FW 
 
 
 [clawpatch]
@@ -8,7 +10,7 @@
      mx = 8	         # mx_leaf
      my = 8            # my_leaf
      mbc = 2            # Number of ghost cells
-     maux = 5
+     maux = 2
 
      # Equations and boundary conditions
      meqn = 1             # Number of equations
@@ -22,10 +24,10 @@
      maxlevel = 5         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 2.5
-     coarsen_threshold = 1.25
+     refine_threshold = 1
+     coarsen_threshold = 0.5
 
-     smooth-refine = T
+     smooth-refine = F
      refine-level = 5
 
      # --------------
@@ -34,14 +36,15 @@
      tfinal = 0.3         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 1e-2   # Initial time step for 'minlevel'
+     initial_dt = 1e-2    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3
 
      nout  = 10          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
-     nstep = 1            # Only used if outstyle is 3
+     nstep = 1           # Only used if outstyle is 3
+
 
      subcycle = T         # subcycle in time ( = T or F).
      outstyle-uses-maxlevel = F
@@ -49,7 +52,7 @@
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = production   
+     verbosity = production
      output = T
 
      # -----------
@@ -81,9 +84,9 @@
      ay = 0
      by = 1
 
-     periodic_x = F
-     periodic_y = F
-
+     periodic_x = T
+     periodic_y = T
+     
      init_ghostcell = T
 
 [clawpack46]
