(clawpack/filament) Update five patch example

--- a/applications/clawpack/advection/2d/filament/Makefile.am
+++ b/applications/clawpack/advection/2d/filament/Makefile.am
@@ -22,6 +22,7 @@ applications_clawpack_advection_2d_filament_filament_SOURCES = \
 	applications/clawpack/advection/2d/all/user5_setaux_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack46_setaux.f \
 	applications/clawpack/advection/2d/all/clawpack5_setaux.f90 \
+	applications/clawpack/advection/2d/all/rpn2_cons_update.f \
 	applications/clawpack/advection/2d/all/clawpack46_rpn2adv.f \
 	applications/clawpack/advection/2d/all/clawpack46_rpt2adv.f \
 	applications/clawpack/advection/2d/all/clawpack46_rpn2adv_manifold.f \
