--- a/applications/clawpack/advection/2d/filament/example2_fivepatch.ini
+++ b/applications/clawpack/advection/2d/filament/example2_fivepatch.ini
@@ -2,12 +2,28 @@
     example = 2
     alpha = 0.4
 
+[clawpatch]
+     mx = 8
+     my = 8
+     maux = 3             # maux  (store mcapa in 1, if we have it)
+
 [Options]
     minlevel = 2
-    maxlevel = 5
+    maxlevel = 4
 
     smooth-refine = T
-    smooth-level = 4
+    smooth-level = 3
+
+    outstyle = 1
+    nout = 32
+    nstep = 1
+
+    trapfpe = F
+    init_ghostcell = T
+
+    verbosity = essential
+    conservation-check=T
+
 
 # mapping functions
      manifold = T         # Manifold
@@ -16,8 +32,6 @@
 
 [clawpack46]
      mcapa = 1            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
 
 [clawpack5]
      mcapa = 1            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
