--- a/applications/geoclaw/teton/fclaw_options.ini
+++ b/applications/geoclaw/teton/fclaw_options.ini
@@ -1,18 +1,23 @@
 [user]
 	example = 1
-[Options]
+
 
 # Grid dimensions
+[clawpatch]
      mx = 16
      my = 16
      mbc = 2              # Number of ghost cells
 
-# Ghost cells initialization
+     maux = 3
+     meqn = 3
+
+[Options]
+     # Ghost cells initialization
      init_ghostcell = F   # Initialize ghost cells
 
-# Regridding information
+     # Regridding information
      minlevel = 0
-     maxlevel = 8
+     maxlevel = 7
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.005
@@ -24,16 +29,16 @@
      tfinal = 28800         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 10.0   # Initial time step for 'minlevel'
+     initial_dt = 1.0   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.8    # desired cfl
+     desired_cfl = 0.7    # desired cfl
 
-     outstyle = 1         # 1 : Output steps  = tfinal/nout;
+     outstyle = 3         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 1            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     nout = 800            # Used for all three out styles;  has different meaning, though.
+     nstep =  20            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
 
@@ -42,46 +47,51 @@
 
 # File and console IO
      verbosity = production     # verbose
-     serialout = T
+     output = T     
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
-     conservation-check = F
+     conservation-check = T
      run-user-diagnostics = T
+     report-timing = F
 
-# Ghost packing options for parallel communication
-
-
-# Equations and boundary conditions
-     meqn = 3             # Number of equations
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
 # Mapping
 
-     # Domain dimensions
+     # Domain dimensions (TetonDamLatLon)
 # [   -112.36171859,     43.59190493]
 # [   -111.25911794,     43.97790751]
 
+# TetonLarge
+#[   -112.33239583,     43.19013194]
+#[   -111.27815972,     43.94986806]
 
-     ax = -112.36171859
-     bx = -111.25911794
-     ay = 43.59190493
-     by = 43.97790751
+# Lower left   ( -112.34626736,  43.18013542)
+# Upper right  ( -111.26428819,  43.95986458)
+
+     ax = -112.34626736
+     bx = -111.26428819
+     ay = 43.18013542
+     by = 43.95986458
 
      # Aspect ratio : 2.85645927 (actual) vs. 2.83333 (approx)
-     mi = 2
+     mi = 1
      mj = 1
 
 [geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 2            # mcapa
-     maux = 3             # maux
      mbathy = 1           # mbathy
      src_term = 1         # src_term
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     ascii-out = T        # serial out
+
 
 # Coarsening
      dry_tolerance_c = 1.e-3
