--- a/applications/clawpack/acoustics/2d/interface/Makefile.am
+++ b/applications/clawpack/acoustics/2d/interface/Makefile.am
@@ -15,7 +15,7 @@ applications_clawpack_acoustics_2d_interface_interface_SOURCES = \
 	applications/clawpack/acoustics/2d/interface/user_5.0/setaux.f90 \
 	applications/clawpack/acoustics/2d/interface/user_5.0/qinit.f90 \
 	applications/clawpack/acoustics/2d/interface/user_5.0/tag4refinement.f90 \
-	applications/clawpack/acoustics/2d/interface/user_5.0/tag4coarsening.f90 \
+	applications/clawpack/acoustics/2d/interface/user_5.0/tag4coarsening.f \
 	applications/clawpack/acoustics/2d/rp/rpn2acv.f \
 	applications/clawpack/acoustics/2d/rp/rpt2acv.f \
 	applications/clawpack/acoustics/2d/rp/rpn2_vc_acoustics.f90 \
