--- a/applications/clawpack/advection/2d/swirl/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl/fclaw_options.ini
@@ -1,13 +1,13 @@
 [user]
      claw_version = 4         # Periodicity of the flow field.
-     tperiod = 4.0
+     period = 4.0
      claw-version = 4
 
 
 [clawpatch]
      # Grid dimensions
      mx = 8		      # mx_leaf
-     my = 8               # my_leaf
+     my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 3
 
@@ -68,7 +68,7 @@
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
-     report-timing=F
+     report-timing=T
 
      # -------
      # Mapping
