(clawpack5.0) Added header to Makefile

--- a/src/solvers/fc2d_clawpack5/Makefile.am
+++ b/src/solvers/fc2d_clawpack5/Makefile.am
@@ -2,8 +2,9 @@
 libclawpack5_generated_headers =
 libclawpack5_installed_headers = \
 	src/solvers/fc2d_clawpack5/fc2d_clawpack5.h \
+	src/solvers/fc2d_clawpack5/fc2d_clawpack5_options.h \
 	src/solvers/fc2d_clawpack5/clawpack5_user_fort.h \
-	src/solvers/fc2d_clawpack5/fc2d_clawpack5_options.h
+	src/solvers/fc2d_clawpack5/fc2d_clawpack5_fort.h
 
 libclawpack5_compiled_sources = \
 	src/solvers/fc2d_clawpack5/fc2d_clawpack5.cpp \
