(replicated) Update example so it uses a single block

--- a/applications/clawpack/advection/2d/replicated/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/replicated/fclaw_options.ini
@@ -2,16 +2,19 @@
 # A periodic example that uses [ax,bx]x[ay,by]
 # -----------------------------------------------------------
 [user]
+     example = 1
      claw-version = 4
-     replicate-factor = 2  # Set to -1 to use --mi, --mj (below)
+     replicate-factor = -1  # Set to -1 to use --mi, --mj (below)
+
+
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
 # -----------------------------------------------------------
 [clawpatch]
      # Grid dimensions
-     mx = 32               # mx_leaf
-     my = 32               # my_leaf
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
 
      maux = 3    # Auxilliary data (kappa, u, v)
@@ -23,37 +26,40 @@
 [Options]
 
      # Regridding options
-     minlevel = 2               # Minimum level
-     maxlevel = 4               # Maximum levels of refinement
+     minlevel = 4               # Minimum level
+     maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.01
-     smooth-refine = F
-     smooth-level = 4
+     coarsen_threshold = 0.001
+     smooth-refine = T
+     smooth-level = 6
 
      # Time stepping
-     tfinal = 4.0         #
-     initial_dt = 0.05    # Initial time step for 'minlevel'
+     tfinal = 0.2          #
+     initial_dt = 1e-2     # Initial time step for 'minlevel'
 
-     use_fixed_dt = F     # Take a fixed time step
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
+     use_fixed_dt = T      # Take a fixed time step
+     max_cfl = 1.0         # maximum cfl
+     desired_cfl = 0.64    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     outstyle = 3          # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 20             # 
+     nstep = 20            # Only used if outstyle is 3
 
-     subcycle =  F        # subcycle in time ( = T or F).
+     subcycle =  F         # subcycle in time ( = T or F).
+     outstyle-uses-maxlevel = F
+     advance-one-step = F
 
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
-     trapfpe = F          # trap floating point exceptions
+     trapfpe = F           # trap floating point exceptions
      mpi_debug = F
+     report-timing = T
 
 # File and console IO
 
-     verbosity = essential        # verbose
+     verbosity = production       # verbose
      output = T
 
 # Mapping options
@@ -64,8 +70,8 @@
 
      # Dimensions of brick domain - mi x mj.  To override 'replicate_factor',
      # set replicate_factor=-1.
-     mi = 4
-     mj = 4
+     mi = 2
+     mj = 2
 
      #  (ax,bx,ay,by)=(0,mi,0,mj) are set in torus.cpp
 
