(fc2d_clawpack4.6) Move interpolate/average/copy to patches/clawpatch

--- a/src/solvers/fc2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fc2d_clawpack4.6/Makefile.am
@@ -16,16 +16,7 @@ libclawpack4_6_compiled_sources = \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_flux2.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_flux2fw.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_step2.f \
-	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_step2_wrap.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_average.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_copy.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_interpolate.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_local_ghost_pack.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_diagnostics.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_output_ascii.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_tag4refinement.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_tag4coarsening.f \
-	src/solvers/fc2d_clawpack4.6/fclaw2d_source/fc2d_clawpack46_timeinterp.f
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_step2_wrap.f
 
 
 lib_LTLIBRARIES += src/solvers/fc2d_clawpack4.6/libclawpack4.6.la
@@ -35,9 +26,12 @@ src_solvers_fc2d_clawpack4_6_libclawpack4_6_la_SOURCES = \
   $(libclawpack4_6_compiled_sources)
 
 src_solvers_fc2d_clawpack4.6_libclawpack4.6_la_CPPFLAGS = \
-  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
+  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS) $(FCLAW_CLAWPATCH_CPPFLAGS)
 
-FCLAW_CLAWPACK46_CPPFLAGS = -I@top_srcdir@/src/solvers/fc2d_clawpack4.6
-FCLAW_CLAWPACK46_LDADD = @top_builddir@/src/solvers/fc2d_clawpack4.6/libclawpack4.6.la
+FCLAW_CLAWPACK46_CPPFLAGS = -I@top_srcdir@/src/solvers/fc2d_clawpack4.6 
+
+LDADD += @top_builddir@/src/solvers/fc2d_clawpack4.6/libclawpack4.6.la
+
+AM_CPPFLAGS += -I@top_srcdir@/src/solvers/fcd_clawpack4.6 $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 include_HEADERS += $(libclawpack4_6_installed_headers)
