--- a/src/solvers/fc2d_clawpack5/Makefile.am
+++ b/src/solvers/fc2d_clawpack5/Makefile.am
@@ -19,16 +19,7 @@ libclawpack5_compiled_sources = \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_flux2.f \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_step2.f90 \
 	src/solvers/fc2d_clawpack5/fortran_source/clawpack5_step2_wrap.f \
-	src/solvers/fc2d_clawpack5/fortran_source/philim.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_average.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_copy.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_interpolate.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_local_ghost_pack.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_diagnostics.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_tag4refinement.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_tag4coarsening.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_output_ascii.f \
-	src/solvers/fc2d_clawpack5/fclaw2d_source/fc2d_clawpack5_timeinterp.f
+	src/solvers/fc2d_clawpack5/fortran_source/philim.f
 
 lib_LTLIBRARIES += src/solvers/fc2d_clawpack5/libclawpack5.la
 
@@ -37,9 +28,11 @@ src_solvers_fc2d_clawpack5_libclawpack5_la_SOURCES = \
   $(libclawpack5_compiled_sources)
 
 src_solvers_fc2d_clawpack5_libclawpack5_la_CPPFLAGS = \
-  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
+  $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS) $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 FCLAW_CLAWPACK5_CPPFLAGS = -I@top_srcdir@/src/solvers/fc2d_clawpack5
 FCLAW_CLAWPACK5_LDADD = @top_builddir@/src/solvers/fc2d_clawpack5/libclawpack5.la
+
+AM_CPPFLAGS += -I@top_srcdir@/src/solvers/fcd_clawpack5 $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 include_HEADERS += $(libclawpack5_installed_headers)
