(clawpack/advection) Update make files to add clawpatch library

--- a/applications/clawpack/advection/2d/swirl/Makefile.am
+++ b/applications/clawpack/advection/2d/swirl/Makefile.am
@@ -20,9 +20,15 @@ applications_clawpack_advection_2d_swirl_swirl_SOURCES = \
 	applications/clawpack/advection/2d/swirl/user_5.0/b4step2.f90
 
 applications_clawpack_advection_2d_swirl_swirl_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
+        $(AM_CPPFLAGS) \
+        $(FCLAW_CLAWPACK46_CPPFLAGS) \
+        $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 applications_clawpack_advection_2d_swirl_swirl_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
 
 ## @top_builddir@/src/solvers/fclaw2d_clawpack46/libclawpack5.la
