--- a/applications/clawpack/advection/2d/disk/Makefile.am
+++ b/applications/clawpack/advection/2d/disk/Makefile.am
@@ -30,4 +30,7 @@ applications_clawpack_advection_2d_disk_disk_CPPFLAGS = -I../all/ \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_advection_2d_disk_disk_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD)  $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD)  \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
