--- a/applications/clawpack/advection/2d/filament/Makefile.am
+++ b/applications/clawpack/advection/2d/filament/Makefile.am
@@ -33,10 +33,15 @@ applications_clawpack_advection_2d_filament_filament_SOURCES = \
 
 
 applications_clawpack_advection_2d_filament_filament_CPPFLAGS = -I../all/ \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) \
+        $(FCLAW_CLAWPACK5_CPPFLAGS)
+	    
 
 # applications_clawpack_advection_2d_filament_filament_CPPFLAGS += -D MPI_DEBUG
 
 
 applications_clawpack_advection_2d_filament_filament_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD)  $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD)  \
+	    $(FCLAW_CLAWPATCH_LDADD)  \
+	    $(LDADD)
