--- a/applications/clawpack/advection/2d/latlong/Makefile.am
+++ b/applications/clawpack/advection/2d/latlong/Makefile.am
@@ -22,4 +22,7 @@ applications_clawpack_advection_2d_latlong_latlong_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_advection_2d_latlong_latlong_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD)  \
+        $(FCLAW_CLAWPATCH_LDADD)  \
+        $(LDADD)
