--- a/applications/clawpack/advection/2d/sphere/Makefile.am
+++ b/applications/clawpack/advection/2d/sphere/Makefile.am
@@ -27,4 +27,7 @@ applications_clawpack_advection_2d_sphere_sphere_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_advection_2d_sphere_sphere_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
