--- a/applications/clawpack/advection/2d/torthem/Makefile.am
+++ b/applications/clawpack/advection/2d/torthem/Makefile.am
@@ -11,7 +11,10 @@ applications_clawpack_advection_2d_torthem_torthem_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_advection_2d_torthem_torthem_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
 
 ## Due to C++ libraries we need to force C++ linking for a C main program
 nodist_EXTRA_applications_clawpack_advection_2d_torthem_torthem_SOURCES = dummy.cxx
