--- a/applications/clawpack/shallow/2d/radialdam/Makefile.am
+++ b/applications/clawpack/shallow/2d/radialdam/Makefile.am
@@ -26,4 +26,7 @@ applications_clawpack_shallow_2d_radialdam_radialdam_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_shallow_2d_radialdam_radialdam_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
