--- a/applications/clawpack/burgers/2d/pwconst/Makefile.am
+++ b/applications/clawpack/burgers/2d/pwconst/Makefile.am
@@ -16,4 +16,7 @@ applications_clawpack_burgers_2d_pwconst_pwconst_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_burgers_2d_pwconst_pwconst_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(LDADD)
