--- a/applications/clawpack/transport/correlatedcb/Makefile.am
+++ b/applications/clawpack/transport/correlatedcb/Makefile.am
@@ -37,4 +37,7 @@ applications_clawpack_transport_correlatedcb_correlatedcb_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_transport_correlatedcb_correlatedcb_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD) $(FCLAW_CLAWPACK5_LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+	    $(LDADD) 
