--- a/applications/clawpack/transport/gaussian/Makefile.am
+++ b/applications/clawpack/transport/gaussian/Makefile.am
@@ -36,4 +36,7 @@ applications_clawpack_transport_gaussian_gaussian_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_clawpack_transport_gaussian_gaussian_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD) $(FCLAW_CLAWPACK5_LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) \
+        $(FCLAW_CLAWPACK5_LDADD) \
+        $(FCLAW_CLAWPATCH_LDADD) \
+	    $(LDADD) 
