--- a/applications/clawpack/advection/2d/sphere/example0.ini
+++ b/applications/clawpack/advection/2d/sphere/example0.ini
@@ -1,5 +1,5 @@
 [User]
-     example = 0                # 0,1 = pillowgrid;  2 = cubedsphere
+     example = 0                # 0 = cubedsphere; 1 = pillowsphere
      revs-per-second = 0.5      # Rigid body rotation
      claw-version = 4
 
