--- a/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
@@ -32,6 +32,7 @@
 
 # Time stepping
      tfinal = 0.75          # Since we are not scaling the results
+     #initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      initial_dt = 2.5e-3    # Initial time step for 'minlevel'
 
      use_fixed_dt = T            # Take a fixed time step
@@ -46,7 +47,7 @@
 
 
 # File and console IO
-     verbosity = essential      # verbosity
+     verbosity = production      # verbosity
      output = T                 # 
      run-user-diagnostics = F
      conservation-check = F
@@ -54,9 +55,9 @@
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = F
-     tikz-figsize = 1 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
-     tikz-plot-fig = F      # Set to true if you have figure 'plot_0000.png' available.
+     tikz-out = T
+     tikz-figsize = 4 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
+     tikz-plot-fig = T      # Set to true if you have figure 'plot_0000.png' available.
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
