Cleaned up corner code to handle pillow grid

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,7 +39,8 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_convenience.h \
 	src/fclaw2d_map_query.h \
 	src/fclaw2d_map_query_defs.h \
-	src/fclaw2d_diagnostics.h
+	src/fclaw2d_diagnostics.h \
+	src/mappings/pillowsphere/pillowsphere.h
 
 libforestclaw_internal_headers =
 
@@ -97,12 +98,12 @@ libforestclaw_compiled_sources = \
 	src/mappings/pillowdisk5/mapc2m_pillowdisk5.f \
 	src/mappings/cubedsphere/mapc2m_cubedsphere.f \
 	src/mappings/pillowsphere/mapc2m_pillowsphere.f \
-	src/mappings/pillowsphere/pillowsphere_corner_ghost.f  \
+	src/mappings/pillowsphere/pillowsphere_fort.f  \
+	src/mappings/pillowsphere/pillowsphere.c  \
 	src/mappings/fivepatch/mapc2m_fivepatch.f \
 	src/mappings/torus/mapc2m_torus.f \
 	src/mappings/torus/mapc2m_twisted_torus.f \
 	src/mappings/latlong/mapc2m_latlong.f \
-	src/mappings/pillowsphere/pillowsphere_corner_ghost.f \
 	src/mappings/fclaw2d_map_nomap.c \
 	src/mappings/fclaw2d_map_nomap_brick.c \
 	src/fortran_source2d/fclaw2d_interpolate_util.f \
@@ -113,6 +114,7 @@ libforestclaw_compiled_sources = \
 # this variable is used for headers that are not publicly installed
 FCLAW_CPPFLAGS = \
     -I@top_srcdir@/src \
+    -I@top_srcdir@/src/mappings/pillowsphere \
 	-I@top_srcdir@/src/fortran_source2d
 
 FCLAW_FFLAGS = $(FCLAW_CPPFLAGS)   # Not currently needed
