--- a/applications/clawpack/advection/2d/sphere/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/sphere/fclaw_options.ini
@@ -1,6 +1,6 @@
 [user]
-     example = 0          # 1 = pillowsphere;  2 = cubed_sphere
-     revs-per-second = 0.5          # Rigid body rotation
+     example = 0               # 0 = cubed_sphere; 1 = pillowsphere 
+     revs-per-second = 0.5     # Rigid body rotation
      claw-version = 4
 
 [clawpatch]
