Add clawpatch library to geoclaw

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -23,6 +23,9 @@ if FCLAW_ENABLE_GEOCLAW
 # GeoClaw library and examples
 # ----------------------------------
 
+## Patches needed for GeoClaw solvers
+include src/patches/clawpatch/Makefile.am
+
 ## Solver library
 include src/solvers/fc2d_geoclaw/Makefile.am
 
