--- a/applications/clawpack/advection/2d/annulus/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/annulus/fclaw_options.ini
@@ -4,10 +4,8 @@
 [user]
      example = 0          # A periodic
      beta = 0.4            # Inner radius (outer radius = 1.0
+     claw-version = 4
 
-# -----------------------------------------------------------
-# Basic ForestClaw options
-# -----------------------------------------------------------
 [clawpatch]
      # Grid dimensions
      mx = 8               # mx_leaf
@@ -18,16 +16,15 @@
      # Equations and boundary conditions
      meqn = 1             # Number of equations
 
-[Options]
 
-# Grid dimensions
-     mx = 8               # Interior dimensions of each grid
-     my = 8		  #
-     mbc = 2              # Number of ghost cells.
+[Options]
+# -----------------------------------------------------------
+# Basic ForestClaw options
+# -----------------------------------------------------------
 
 # Regridding options
      minlevel = 0               # Minimum level
-     maxlevel = 3               # Maximum levels of refinement
+     maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.01
@@ -43,7 +40,8 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 8            # Used for all three out styles;  has different meaning, though.
+
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle =  T        # subcycle in time ( = T or F).
@@ -71,7 +69,6 @@
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux  (velocity stored in (2,3)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -86,7 +83,6 @@
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux  (velocity stored in (2,3)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
