(advection) Update headers to reflect new solver virtual table names

--- a/applications/clawpack/advection/2d/filament/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/filament/fclaw_options.ini
@@ -1,6 +1,6 @@
 [user]
      example = 0        # no mapping
-     claw-version = 4
+     claw-version = 5
 
 [clawpatch]
      # Grid dimensions
@@ -34,7 +34,7 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # Controls how often output files are produced
-     nout = 32
+     nout = 8
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T       # subcycle in time ( = T or F).
@@ -70,7 +70,6 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 2             # maux  (store mcapa in 1, if we have it)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -84,8 +83,7 @@
 
 [clawpack5]
      order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 2             # maux  (store mcapa in 1, if we have it)
+     mcapa = 0            # mcapa     maux = 2             # maux  (store mcapa in 1, if we have it)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
