--- a/applications/clawpack/advection/2d/filament/example2_fivepatch.ini
+++ b/applications/clawpack/advection/2d/filament/example2_fivepatch.ini
@@ -2,6 +2,9 @@
     example = 2
     alpha = 0.4
 
+[clawpatch]
+    maux = 3
+
 [Options]
     minlevel = 2
     maxlevel = 5
@@ -16,8 +19,6 @@
 
 [clawpack46]
      mcapa = 1            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
 
 [clawpack5]
      mcapa = 1            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
