--- a/applications/clawpack/advection/2d/hemisphere/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/hemisphere/fclaw_options.ini
@@ -16,26 +16,29 @@
 
 [Options]
      minlevel = 0         # Minimum level
-     maxlevel = 4        # Maximum levels of refinement
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
      smooth-level = 1
 
      # Time stepping
-     tfinal = 5.0         #
+     tfinal = 2.5         #
      use_fixed_dt = F     # Take a fixed time step
+
      initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20            # Used for all three out styles;  has different meaning, though.
+     nout = 10            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
+     outstyle-uses-maxlevel = F
+     advance-one-step = F
 
 # File and console IO
-     verbosity = essential        # verbose
+     verbosity = production        # verbose
      output = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging options
@@ -60,7 +63,6 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -75,7 +77,6 @@
 [clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
