--- a/applications/clawpack/transport/gaussian/fclaw_options.ini
+++ b/applications/clawpack/transport/gaussian/fclaw_options.ini
@@ -13,15 +13,13 @@
      # Equations and boundary conditions
      meqn = 1             # Number of equations
 
-
-
 [Options]
 
      # Refinement
      minlevel = 2         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.01
+     refine_threshold = 0.05
      coarsen_threshold = 0.001
      smooth-refine = T
      smooth-level = 0
@@ -37,14 +35,15 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20            # Used for all three out styles;  has different meaning, though.
+     nout = 10            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
+     outstyle-uses-maxlevel = F
      subcycle = T         # subcycle in time ( = T or F).
 
 # Console and file IO
-     verbosity = essential        # verbose
-     output = T        # Set this to F for parallel runs.  T is dead slow.
+     verbosity = essential     # verbose
+     output = T                # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
      trapfpe = T          # Trap floating point exceptions
@@ -65,7 +64,6 @@
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
@@ -80,7 +78,6 @@
 [clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
-     maux = 3             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
