--- a/Makefile.apps
+++ b/Makefile.apps
@@ -41,6 +41,9 @@ if FCLAW_ENABLE_ASH3D
 # Ash3d examples (requires submodule)
 # -----------------------------------
 
+## Patches needed for Clawpack solvers
+include src/patches/clawpatch/Makefile.am
+
 ## Solver library
 include src/solvers/fc3d_ash3d/Makefile.am
 
