--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_patch.h \
 	src/fclaw2d_vtable.h \
 	src/fclaw2d_output.h \
+	src/fclaw2d_time_sync.h \
 	src/fclaw2d_update_single_step.h \
 	src/fclaw2d_physical_bc.h \
 	src/fclaw2d_ghost_fill.h \
@@ -79,6 +80,7 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_timeinterp.c \
 	src/fclaw2d_initialize.c \
 	src/fclaw2d_finalize.c \
+	src/fclaw2d_time_sync.c \
 	src/fclaw2d_corner_neighbors.c \
 	src/fclaw2d_face_neighbors.c \
 	src/fclaw2d_farraybox.cpp \
