--- a/Makefile.apps
+++ b/Makefile.apps
@@ -37,17 +37,18 @@ endif
 
 if FCLAW_ENABLE_ASH3D
 
-# -----------------------------------
+# ---------------------------------------------
 # Ash3d examples (requires submodule)
-# -----------------------------------
+# -- Uncomment Makefiles below to compile Ash3d
+# ---------------------------------------------
 
 ## Patches needed for Clawpack solvers
-include src/patches/clawpatch/Makefile.am
+#include src/patches/clawpatch/Makefile.am
 
 ## Solver library
-include src/solvers/fc3d_ash3d/Makefile.am
+#include src/solvers/fc3d_ash3d/Makefile.am
 
 ## Applications
-include src/solvers/fc3d_ash3d/test_cases/ash3d.apps
+#include src/solvers/fc3d_ash3d/test_cases/ash3d.apps
 
 endif
