(clawpack/slotted_disk) Fix whitespace issue in Makefile

--- a/applications/clawpack/transport/slotted_disk/Makefile.am
+++ b/applications/clawpack/transport/slotted_disk/Makefile.am
@@ -39,13 +39,16 @@ applications_clawpack_transport_slotted_disk_slotted_disk_SOURCES = \
 SLOTTED_DISK_CPPFLAGS = -I@top_srcdir@/applications/clawpack/transport/all
 
 applications_clawpack_transport_slotted_disk_slotted_disk_CPPFLAGS = \
+        $(AM_CPPFLAGS) \
 		$(SLOTTED_DISK_CPPFLAGS) \
-		$(AM_CPPFLAGS)
+        $(FCLAW_CLAWPACK46_CPPFLAGS) \
+        $(FCLAW_CLAWPACK5_CPPFLAGS) \
+        $(FCLAW_CLAWPATCH_CPPFLAGS)
 
 applications_clawpack_transport_slotted_disk_slotted_disk_LDADD = \
-        $(LDADD) \
+		$(LDADD) \
         $(FCLAW_CLAWPACK46_LDADD)  \
         $(FCLAW_CLAWPACK5_LDADD)  \
-		$(FCLAW_CLAWPATCH_LDADD	) \     
+		$(FCLAW_CLAWPATCH_LDADD) \
         $(FCLAW_LDADD)
 
