--- a/applications/no_solver/Makefile.am
+++ b/applications/no_solver/Makefile.am
@@ -4,11 +4,10 @@ bin_PROGRAMS += applications/no_solver/no_solver
 
 applications_no_solver_no_solver_SOURCES = \
 	applications/no_solver/no_solver.cpp \
-    applications/no_solver/gem3d_output_mesh.c \
+    applications/no_solver/no_solver_user.cpp \
     applications/no_solver/no_solver_options.c \
-	applications/no_solver/no_solver_user.cpp \
-	applications/no_solver/fclaw2d_map_nomap.c \
-	applications/no_solver/initialize.f
+    applications/no_solver/gem3d_output_mesh.c \
+	applications/no_solver/user_4.6/initialize.f
 
 applications_no_solver_no_solver_CPPFLAGS = \
 	       $(AM_CPPFLAGS) \
@@ -16,4 +15,5 @@ applications_no_solver_no_solver_CPPFLAGS = \
 
 # Not needed, but included to check compile
 applications_no_solver_no_solver_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPATCH_LDADD) \
+        $(FCLAW_LDADD)
