(apps/no_solver) Update plotting

--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -4,8 +4,8 @@
 
 
 [clawpatch]
-     mx = 8               # mx_leaf
-     my = 8              # my_leaf
+     mx = 32               # mx_leaf
+     my = 32             # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 0
 
@@ -19,13 +19,13 @@
      # Dynamic gridding parameters     
      # ---------------------------
      minlevel = 1
-     maxlevel = 6
+     maxlevel = 4
      regrid_interval = 1
 
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine = T
-     smooth-level = 5
+     smooth-refine = F
+     smooth-level = 6
 
      # --------------
      # Time stepping
@@ -51,6 +51,23 @@
      # -------------------
      verbosity = essential        
      output = T
+
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = T
+
+     # PNG figure will not be included in final PDF output. 
+     # (NOTE: This setting is for convenience.  The final 
+     # tikz.NNNN.tex file can be edited to include the PNG file)
+     tikz-mesh-only = F   
+
+     # Include PNG figure (created by Matlab, for example). 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
+
+     # To keep constant DPI, increase figisize as maxlevel is increased.
+     tikz-figsize = 4 4   
 
 
      # mapping
